feat(ui)!: Change Requests overhaul, Local Changes tab, branch controls, and draft behavior
- Rename “PR” to “Change Request” across UI and docs; add CR API aliases; migrate config to
repo.crTitleTemplate (back-compat from prTitleTemplate)
- Centralize CR actions in the “Change Requests” tab (Create/Update/Open-Create/Change file/
Insert image/New file); remove CR actions from other views
- Auto‑create/switch to a working branch (content/) when needed (e.g., Change file, Insert
image) to avoid edits on default branch
- Add sticky branch footer in left panel with “Branch: …”, “Switch to Published”, and “Pick
branch”
- Add “Local Changes” tab showing local drafts on the published (default) branch with Open/
Restore; remove old Drafts modal/button
- File tree: add “+ New” on folders, quick search/refresh, and yellow dot for uncommitted local
changes (branch‑aware)
- Drafts: do not create a draft on file open; autosave starts after first edit; restore clears
draft and reloads published content
- Image upload: commit to assetsDir and insert markdown link; preview rewrites relative image
URLs to raw.githubusercontent.com for active branch
- Repo settings: in‑app overrides (owner/repo/branch/templates/dirs), default contentDirs =
src/content
- Fix PWA register (no top‑level await); fix “Cannot access defaults before initialization”
- Docs: update README (CRs, tabs, drafts, footer) and AGENTS; add change request guidance

BREAKING CHANGE: repo.prTitleTemplate is replaced by repo.crTitleTemplate (legacy key
auto‑mapped for back‑compat).

--- a/public/config/.meditor.config.json.example
+++ b/public/config/.meditor.config.json.example
@@ -7,8 +7,8 @@
 		"owner": "your-username",
 		"repo": "your-eleventy-repo",
 		"defaultBranch": "main",
-		"prBranchPrefix": "content/",
-		"postPathTemplate": "{contentDir}/{date}-{slug}.md",
-		"prTitleTemplate": "Add: {title} ({path})"
-	}
+    "prBranchPrefix": "content/",
+    "postPathTemplate": "{contentDir}/{date}-{slug}.md",
+    "crTitleTemplate": "Add: {title} ({path})"
+  }
 }
